--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -22,8 +22,12 @@ button {
   cursor: pointer;
   outline: 0 !important;
   text-decoration: none;
-  touch-action: manipulation;
-  user-select: none;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 button:hover, button:active {
@@ -133,5 +137,4 @@ button:hover, button:active {
   min-height: 30px;
   padding: 5px 30px;
 }
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style.prefixed.css.map */
