--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,7 +8,7 @@ button {
   padding: 20px;
   margin: 10px;
   width: 200px;
-    
+
 	font-size: 16px;
     font-weight: 500;
     text-align: center;
@@ -20,7 +20,7 @@ button {
   background-color: #045b4d;
 	border: 2px solid #045b4d;
   border-radius: 4px;
-    
+
 	transition: color .3s,          background-color .3s;
 
   cursor: pointer;
@@ -28,7 +28,7 @@ button {
 	text-decoration: none;
   touch-action: manipulation;
   user-select: none;
-	
+
 	&:hover, &:active {
 		color: #045b4d;
 		background-color: #fff;
@@ -55,7 +55,7 @@ button {
     h4 {
     margin: 10px 10px;
     text-transform: uppercase;
-    font-weight: 500; 
+    font-weight: 500;
   }
 }
 .number {
@@ -79,4 +79,53 @@ transition: color .3s,          background-color .3s;
   text-align: center;
   margin: 15px auto;
   padding: 10px;
+}
+.overlay {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.7);
+
+	&.show {
+		display: block;
+	}
+}
+
+.modal {
+	display: none;
+	background: #fff;
+	width: 200px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate3d(-50%, -50%, 0);
+
+	&.show {
+		display: block;
+	}
+
+	.close {
+		position: absolute;
+		right: 0;
+		top: 0;
+		padding: 5px;
+		color: #000;
+		text-decoration: none;
+	}
+
+	header {
+		font-size: 20px;
+		line-height: 30px;
+		min-height: 30px;
+		font-weight: bold;
+		padding: 0 30px;
+	}
+
+	.content {
+		min-height: 30px;
+		padding: 5px 30px;
+	}
 }
