--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,9 @@ button:hover, button:active {
 .modal {
   display: none;
   background: #fff;
-  width: 200px;
+  text-align: center;
+  max-width: 400px;
+  width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
