--- a/sass/style.scss
+++ b/sass/style.scss
@@ -97,7 +97,9 @@ transition: color .3s,          background-color .3s;
 .modal {
 	display: none;
 	background: #fff;
-	width: 200px;
+  text-align: center;
+  max-width: 400px;
+  width: 100%;
 	position: absolute;
 	top: 50%;
 	left: 50%;
